# acp-relay

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.relay  Makefile  README.md  codex.yaml  config-container-test.yaml  config-docker.yaml  config.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml  test-results.txt
.github/workflows/: build.yml
clients/: textual_chat.py
clients/tui/: debug.go  model.go  update.go  update_test.go
cmd/relay/: main.go  setup.go
cmd/tui/: main.go
docs/: APP-INTEGRATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md  api.md  architecture.dot  container-mode.md  container-setup.md  container-spec-gaps.md  container-spec.md  container-test-checklist.md  manual-test-results.md  packnplay-improvements.md  permissions.md  pre-commit-setup.md  smoke-test-checklist.md
docs/design/: packnplay-improvements.md
docs/plans/: 2025-10-22-acp-relay-server.md  2025-10-23-container-support-design.md  2025-10-23-container-support.md  2025-10-24-packnplay-improvements.md  2025-10-25-session-resume-design.md  2025-10-25-session-resume-implementation.md  2025-11-10-fix-tests-production-ready.md  2025-11-10-tui-feature-parity.md  2025-11-10-tui-implementation.md  2025-11-12-tui-relay-api-refactor.md
examples/: hello_world.py  interactive_chat.py  permission_test.py  textual_chat.py  websocket_chat.py
examples/web/: README.md  index.html
internal/config/: config.go  config_test.go
internal/container/: errors.go  errors_test.go  manager.go  manager_test.go  stream.go  stream_test.go
internal/db/: db.go  schema.sql
internal/errors/: container_reuse.go  llm_errors.go  llm_errors_test.go  runtime.go  setup.go  xdg.go
internal/http/: handlers.go  handlers_test.go  server.go
internal/jsonrpc/: types.go  types_test.go
internal/logger/: logger.go  logger_test.go
internal/management/: server.go  server_test.go
internal/runtime/: detect.go  detect_test.go
internal/session/: bridge_test.go  connection_manager.go  connection_manager_test.go  initialize.go  manager.go  manager_test.go  session.go  session_new.go
internal/tui/: debug.go  model.go  update.go  update_test.go  view.go
internal/websocket/: server.go  server_test.go
internal/xdg/: xdg.go  xdg_test.go
scripts/: run-integration-test.sh
testdata/: mock_agent.py
tests/: integration_container_test.py  integration_test.go  test_agent.sh  test_config.yaml
tests/e2e/: security_test.go  (+1 more)
tools/: query-messages.py  stream-messages.py
(+58 files in other folders)
