# ABOUTME: Python project configuration for acp-relay tooling and tests
# ABOUTME: Configures ruff linter/formatter and pytest for Python components

[project]
name = "acp-relay-tools"
version = "0.1.0"
description = "Python tools and tests for acp-relay"
requires-python = ">=3.10"

[tool.ruff]
# Ruff configuration for linting and formatting
target-version = "py310"
line-length = 100
indent-width = 4

# Enable specific rule categories
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules that are too strict or not applicable
lint.ignore = [
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "ISC001",   # Single line implicit string concatenation (conflicts with formatter)
    "COM812",   # Missing trailing comma (conflicts with formatter)
]

# Allow autofix for all enabled rules (when `--fix` is provided)
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["tests", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "integration: Integration tests that may require external services",
    "e2e: End-to-end tests",
]
